--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <div class="menu-desktop">
             <ul>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="#services">Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -61,15 +61,15 @@
         <ul class="menu-mobile-items">
             <li>
                 <img src="./icons/list-style-line.png" alt="list-style">
-                <a href="#">Services</a>
+                <a href="#services">Services</a>
             </li>
             <li>
                 <img src="./icons/list-style-line.png" alt="list-style">
-                <a href="#">About</a>
+                <a href="#about">About</a>
             </li>
             <li>
                 <img src="./icons/list-style-line.png" alt="list-style">
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
         </ul>
         <div class="menu-mobile-button">
@@ -78,7 +78,7 @@
     </div>
 </section>
 
-<section class="skills">
+<section class="skills" id="proyects">
     <div class="skills-title">
         <h2>You must indicate what your profession is or what you do</h2>
     </div>
@@ -111,7 +111,7 @@
             </div>
         </div>
         <div class="skills-carousel-controls">
-            <div class="control-box">
+            <div class="control-box" id="skills-targets">
                 <div class="control-item active"></div>
                 <div class="control-item"></div>
                 <div class="control-item"></div>
@@ -119,7 +119,7 @@
         </div>
     </div>
 </section>
-<section class="offer">
+<section class="offer" id="services">
     <div class="top"></div>
     <div class="offer-title">
         <h3>Why choose me</h3>
@@ -130,7 +130,7 @@
             <div>
                 <img src="./icons/icon-offer-box.png" alt="icon-box">
             </div>
-            <h3>TITLE OR HEADING WILL GO HERE</h3>
+            <h3>TITLE OR HEADING WILL GO HERE 1</h3>
             <p>
                 Im baby portland put a bird on it blog letterpress bitters yuccie. Im baby 
                 portland put a bird on it blog letterpress bitters yuccie.
@@ -143,7 +143,7 @@
             <div>
                 <img src="./icons/icon-offer-box.png" alt="icon-box">
             </div>
-            <h3>TITLE OR HEADING WILL GO HERE</h3>
+            <h3>TITLE OR HEADING WILL GO HERE 2</h3>
             <p>
                 Im baby portland put a bird on it blog letterpress bitters yuccie. Im baby 
                 portland put a bird on it blog letterpress bitters yuccie.
@@ -156,7 +156,7 @@
             <div>
                 <img src="./icons/icon-offer-box.png" alt="icon-box">
             </div>
-            <h3>TITLE OR HEADING WILL GO HERE</h3>
+            <h3>TITLE OR HEADING WILL GO HERE 3</h3>
             <p>
                 Im baby portland put a bird on it blog letterpress bitters yuccie. Im baby 
                 portland put a bird on it blog letterpress bitters yuccie.
@@ -166,7 +166,7 @@
             </a>
         </div>
     </div>
-    <div class="offer-controls">
+    <div class="offer-controls" id="offer-targets">
         <div class="offer-control show"></div>
         <div class="offer-control"></div>
         <div class="offer-control"></div>
@@ -174,7 +174,7 @@
     <div class="bottom"></div>
 </section>
 
-<section class="community">
+<section class="community" id="about">
     <div class="community-title">
         <h2>Heading goes here about your community or offer</h2>
     </div>
@@ -203,7 +203,7 @@
     </div>
     <div class="testimony-carousel">
         <div class="testimony-box active">
-            <h2>People Say</h2>
+            <h2>People Say 1</h2>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis iure mollitia ex beatae 
                 voluptas voluptatum eligendi enim totam possimus, exercitationem asperiores accusamus ullam, atque in?
@@ -212,7 +212,7 @@
             <h3>Gregory Brown</h3>
         </div>
         <div class="testimony-box">
-            <h2>People Say</h2>
+            <h2>People Say 2</h2>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis iure mollitia ex beatae 
                 voluptas voluptatum eligendi enim totam possimus, exercitationem asperiores accusamus ullam, atque in?
@@ -221,7 +221,7 @@
             <h3>Gregory Brown</h3>
         </div>
         <div class="testimony-box">
-            <h2>People Say</h2>
+            <h2>People Say 3</h2>
             <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis iure mollitia ex beatae 
                 voluptas voluptatum eligendi enim totam possimus, exercitationem asperiores accusamus ullam, atque in?
@@ -230,7 +230,7 @@
             <h3>Gregory Brown</h3>
         </div>
     </div>
-    <div class="testimony-controls">
+    <div class="testimony-controls" id="testimony-targets">
         <div class="testimony-control active"></div>
         <div class="testimony-control"></div>
         <div class="testimony-control"></div>
@@ -238,7 +238,7 @@
 </section>
 
 <section class="footer">
-    <div class="footer-top">
+    <div class="footer-top" id="contact">
         <div class="footer-top-text">
             <p>If you are interested in receiving information leave us your email</p>
         </div>
@@ -255,16 +255,16 @@
         <div class="footer-bottom-menu">
             <ul>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#">Proyects</a>
+                    <a href="#proyects">Proyects</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="#services">Services</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
             </ul>
         </div>
